# smile

./: .gitattributes  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
.zed/: settings.json  tasks.json
docs/: README.typ  justfile  workflow.d2
src/smile/: __init__.py  __main__.py  main.py  smile_app.py
src/smile/camera/: camera_worker.py  frame.py
src/smile/recognition/: face_detection.py  recognition_worker.py
src/smile/recognition/detectors/: face_detection.py  face_detection_worker.py  face_recognition_worker.py  recognition_worker.py  smile_detection.py  smile_detection_worker.py  smile_recognition_worker.py
src/smile/resources/: resources.qrc
src/smile/ui/: main_window.ui
src/smile/utils/: convert.py  latest_value_mailbox.py  lerp.py  smooth.py
src/smile/widgets/: overlay_label.py
src/smile/windows/: main_window.py
